# job_finder

./: README.md  app.py  job_finder.example.toml  job_finder.toml  job_finder.vercel.toml  pyproject.toml  requirements.txt  resume.txt  vercel.json
.job_finder/: jobs.db
api/: cron_run.py  index.py
job_finder/: __main__.py  cli.py  config.py  models.py  pipeline.py  scoring.py  storage.py  utils.py
job_finder/notifications/: __init__.py  base.py  emailer.py  telegram.py
job_finder/sources/: __init__.py  base.py  browser.py  greenhouse.py  html.py  lever.py  rss.py  serpapi.py
job_finder_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_scoring.py  test_storage.py  test_telegram.py
